  * parse errors in modules imported during semantic analysis could cause dramatic troubles
  * fixed parsing problems with function literal attributes and enumerators
  * outlining: adding lines before collapsed region could unfold the regions
  * fix: underlined syntax error could lag behind by a keystroke
  * tweak completion box:
    - from browse info: template arguments and contraint stripped from symbol now
    - avoid delayed opening of completion box when typing non-identifier characters
    - completion box now closed for a lot of navigation and editing commands
    - improved speed for large symbol lists
  * status line now cleared after parsing of imports has finished
  * fix installation for VS2012
  * now runs on an almost precise garbage collector
  * DLL project template now has a linker definition file

unreleased Version 0.3.35

  * new linker option to disable using global and standard library search paths
  * add preliminary support for upcoming dmd win64 support
  * add '/' to '\' translation for macro replacements of $(OUTDIR) and $(INTDIR)
  * fixed build variable $(VSINSTALLDIR) (pointed to parent directory of expected dir)
  * added build project to translate sdk to D
  * adjusted to changes to dependency file in dmd 2.061
  * fixed Visual Studio sometimes renamed to VisualD in the window title
  * fixed recovery with multiple syntax errors at module scope
  * project options: added $(Configuration) to expand to the same as 
    $(ConfigurationName) for compatibility with VC++ projects
  * project config: controls now have style WS_TABSTOP to allow keyboard navigation
  * goto definition now uses semantic analysis to find declaration
  * semantic analysis now enabled by default (removed experimental status)
  * semantics: add .ptr property to dynamic array
  * now installed as an "extension" to VS 2010 and VS 2012
  * fixed missing output files when a VC project has a project dependency on a D library project
